<?xml version="1.0" encoding="utf-8"?>
<resources>
	<!-- android_large___2 strings -->

	<string name="app_name">Page 1</string>
	<string name="ek_img_content">ExportKit Image</string>
	<string name="_2024_string">2024</string>
	<string name="february_string">February</string>
	<string name="today_string">Today</string>
	<string name="battery_used_history_string">Battery Used History</string>
	<string name="_33__string">33%</string>
	<string name="battery_string">Battery</string>
	<string name="_32_001_string">32.001</string>
	<string name="tot__kwh_string">Tot. kwh</string>
	<string name="rs_360_string">Rs.360</string>
	<string name="expend_string">Expend</string>
	<string name="_6_00_string">6:00</string>
	<string name="_8_00_string">8:00</string>
	<string name="_10_00_string">10:00</string>
	<string name="_12_00_string">12:00</string>
	<string name="_14_00_string">14:00</string>
	<string name="_16_00_string">16:00</string>
	<string name="gathering_usage_information_for_analysis_and_optimization_of_electric_vehicle_performance__string">Gathering usage information for analysis and optimization of electric vehicle performance.</string>
	<string name="download_data_string">Download Data</string>
</resources>