<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent" android:layout_height="wrap_content" >
	<!-- 
	/*
	 *	This content is generated from the API File Info.
	 *	(Alt+Shift+Ctrl+I).
	 *
	 *	@desc 		
	 *	@file 		android_large___2
	 *	@date 		Tuesday 20th of February 2024 06:58:37 PM
	 *	@title 		Page 1
	 *	@author 	
	 *	@keywords 	
	 *	@generator 	Export Kit v1.3.figma
	 *
	 */
	-->
	<ScrollView android:id="@+id/android_large___2" 
		android:layout_width="wrap_content" 
		android:layout_height="match_parent" >

		<RelativeLayout android:id="@+id/content_container" 
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content" >

			<View   android:id="@+id/_bg__android_large___2"
				android:background="@drawable/_bg__android_large___2_shape"
				 android:layout_marginStart="0dp"
				android:layout_marginTop="0dp"
				android:layout_width="360dp"
				android:layout_height="800dp" />

			<View   android:id="@+id/rectangle_1"
				android:background="@drawable/rectangle_1_shape"
				 android:layout_marginStart="0dp"
				android:layout_marginTop="0dp"
				android:layout_width="360dp"
				android:layout_height="800dp" />


			<RelativeLayout android:id="@+id/group_13"
				android:layout_marginTop="155.38dp"
				android:layout_marginStart="42dp"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				>

				<View   android:id="@+id/_bg__group_13_ek1"
					android:background="@drawable/_bg__group_13_ek1_shape"
					 android:layout_marginStart="-42dp"
					android:layout_marginTop="-155dp"
					android:layout_width="65.58dp"
					android:layout_height="27.91dp" />

				<TextView android:id="@+id/_2024"
					android:textStyle="bold"
					android:textSize="17sp"
					android:textColor="@color/_bg__android_large___2_color"
					android:layout_marginLeft="0dp"
					android:layout_marginTop="4dp"
					android:layout_width="54.41dp"
					android:layout_height="25.62dp"
					android:text="@string/_2024_string"
					 />


				<RelativeLayout android:id="@+id/____icon__arrow_drop_down_"
					android:layout_marginTop="0dp"
					android:layout_marginStart="38dp"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					>

					<View   android:id="@+id/_bg______icon__arrow_drop_down__ek1"
						android:background="@drawable/_bg______icon__arrow_drop_down__ek1_shape"
						 android:layout_marginStart="-80dp"
						android:layout_marginTop="-155dp"
						android:layout_width="27.91dp"
						android:layout_height="27.91dp" />

					<ImageView android:id="@+id/vector"
						android:src="@drawable/vector"
						android:contentDescription="vector"
						 android:layout_marginStart="0dp"
						android:layout_marginTop="0dp"
						android:layout_width="27.91dp"
						android:layout_height="27.91dp" />

					<ImageView android:id="@+id/vector_ek1"
						android:src="@drawable/vector_ek1"
						android:contentDescription="vector_ek1"
						 android:layout_marginStart="8dp"
						android:layout_marginTop="12dp"
						android:layout_width="11.63dp"
						android:layout_height="5.82dp" />

				</RelativeLayout>

			</RelativeLayout>


			<RelativeLayout android:id="@+id/group_12"
				android:layout_marginTop="155.38dp"
				android:layout_marginStart="126.74dp"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				>

				<View   android:id="@+id/_bg__group_12_ek1"
					android:background="@drawable/_bg__group_12_ek1_shape"
					 android:layout_marginStart="-127dp"
					android:layout_marginTop="-155dp"
					android:layout_width="99.06dp"
					android:layout_height="27.91dp" />

				<TextView android:id="@+id/february"
					android:textStyle="bold"
					android:textSize="17sp"
					android:textColor="@color/_bg__android_large___2_color"
					android:layout_marginLeft="0dp"
					android:layout_marginTop="4dp"
					android:layout_width="86.84dp"
					android:layout_height="25.62dp"
					android:text="@string/february_string"
					 />


				<RelativeLayout android:id="@+id/____icon__arrow_drop_down__ek2"
					android:layout_marginTop="0dp"
					android:layout_marginStart="71dp"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					>

					<View   android:id="@+id/_bg______icon__arrow_drop_down__ek3"
						android:background="@drawable/_bg______icon__arrow_drop_down__ek3_shape"
						 android:layout_marginStart="-198dp"
						android:layout_marginTop="-155dp"
						android:layout_width="27.91dp"
						android:layout_height="27.91dp" />

					<ImageView android:id="@+id/vector_ek2"
						android:src="@drawable/vector_ek2"
						android:contentDescription="vector_ek2"
						 android:layout_marginStart="0dp"
						android:layout_marginTop="0dp"
						android:layout_width="27.91dp"
						android:layout_height="27.91dp" />

					<ImageView android:id="@+id/vector_ek3"
						android:src="@drawable/vector_ek3"
						android:contentDescription="vector_ek3"
						 android:layout_marginStart="8dp"
						android:layout_marginTop="12dp"
						android:layout_width="11.63dp"
						android:layout_height="5.82dp" />

				</RelativeLayout>

			</RelativeLayout>


			<RelativeLayout android:id="@+id/group_11"
				android:layout_marginTop="155.38dp"
				android:layout_marginStart="245dp"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				>

				<View   android:id="@+id/_bg__group_11_ek1"
					android:background="@drawable/_bg__group_11_ek1_shape"
					 android:layout_marginStart="-245dp"
					android:layout_marginTop="-155dp"
					android:layout_width="76dp"
					android:layout_height="27.91dp" />

				<TextView android:id="@+id/today"
					android:textStyle="bold"
					android:textSize="17sp"
					android:textColor="@color/_bg__android_large___2_color"
					android:layout_marginLeft="0dp"
					android:layout_marginTop="4dp"
					android:layout_width="63.82dp"
					android:layout_height="25.62dp"
					android:text="@string/today_string"
					 />


				<RelativeLayout android:id="@+id/____icon__arrow_drop_down__ek4"
					android:layout_marginTop="0dp"
					android:layout_marginStart="48dp"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					>

					<View   android:id="@+id/_bg______icon__arrow_drop_down__ek5"
						android:background="@drawable/_bg______icon__arrow_drop_down__ek5_shape"
						 android:layout_marginStart="-293dp"
						android:layout_marginTop="-155dp"
						android:layout_width="27.91dp"
						android:layout_height="27.91dp" />

					<ImageView android:id="@+id/vector_ek4"
						android:src="@drawable/vector_ek4"
						android:contentDescription="vector_ek4"
						 android:layout_marginStart="0dp"
						android:layout_marginTop="0dp"
						android:layout_width="27.91dp"
						android:layout_height="27.91dp" />

					<ImageView android:id="@+id/vector_ek5"
						android:src="@drawable/vector_ek5"
						android:contentDescription="vector_ek5"
						 android:layout_marginStart="8dp"
						android:layout_marginTop="12dp"
						android:layout_width="11.63dp"
						android:layout_height="5.82dp" />

				</RelativeLayout>

			</RelativeLayout>


			<RelativeLayout android:id="@+id/____icon__navigate_next_"
				android:layout_marginTop="48dp"
				android:layout_marginStart="11dp"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				>

				<View   android:id="@+id/_bg_______icon__navigate_next__ek1"
					android:background="@drawable/_bg_______icon__navigate_next__ek1_shape"
					 android:layout_marginStart="-11dp"
					android:layout_marginTop="-48dp"
					android:layout_width="26.39dp"
					android:layout_height="26.39dp" />

				<ImageView android:id="@+id/vector_ek6"
					android:src="@drawable/vector_ek6"
					android:contentDescription="vector_ek6"
					 android:layout_marginStart="0dp"
					android:layout_marginTop="0dp"
					android:layout_width="26.39dp"
					android:layout_height="26.39dp" />

				<ImageView android:id="@+id/vector_ek7"
					android:src="@drawable/vector_ek7"
					android:contentDescription="vector_ek7"
					 android:layout_marginStart="9dp"
					android:layout_marginTop="7dp"
					android:layout_width="7.24dp"
					android:layout_height="12.28dp" />

			</RelativeLayout>

			<TextView android:id="@+id/battery_used_history"
				android:textStyle="bold"
				android:textSize="17sp"
				android:textColor="@color/_bg__android_large___2_color"
				android:layout_marginLeft="103dp"
				android:layout_marginTop="94dp"
				android:layout_width="169.7dp"
				android:layout_height="24.7dp"
				android:text="@string/battery_used_history_string"
				 />


			<RelativeLayout android:id="@+id/group_19"
				android:layout_marginTop="535dp"
				android:layout_marginStart="35dp"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				>

				<View   android:id="@+id/_bg__group_19_ek1"
					android:background="@drawable/_bg__group_19_ek1_shape"
					 android:layout_marginStart="-35dp"
					android:layout_marginTop="-535dp"
					android:layout_width="291dp"
					android:layout_height="44dp" />


				<RelativeLayout android:id="@+id/group_16"
					android:layout_marginTop="0dp"
					android:layout_marginStart="0dp"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					>

					<View   android:id="@+id/_bg__group_16_ek1"
						android:background="@drawable/_bg__group_16_ek1_shape"
						 android:layout_marginStart="-35dp"
						android:layout_marginTop="-535dp"
						android:layout_width="45dp"
						android:layout_height="44dp" />

					<TextView android:id="@+id/_33_"
						android:textStyle="bold"
						android:textSize="17sp"
						android:textColor="@color/_bg__android_large___2_color"
						android:layout_marginLeft="0dp"
						android:layout_marginTop="24dp"
						android:layout_width="46.7dp"
						android:layout_height="24.7dp"
						android:text="@string/_33__string"
						 />

					<TextView android:id="@+id/battery"
						android:textSize="14sp"
						android:textColor="@color/_bg__android_large___2_color"
						android:layout_marginLeft="0dp"
						android:layout_marginTop="0dp"
						android:layout_width="58.4dp"
						android:layout_height="20.4dp"
						android:text="@string/battery_string"
						 />

				</RelativeLayout>


				<RelativeLayout android:id="@+id/group_17"
					android:layout_marginTop="0dp"
					android:layout_marginStart="120dp"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					>

					<View   android:id="@+id/_bg__group_17_ek1"
						android:background="@drawable/_bg__group_17_ek1_shape"
						 android:layout_marginStart="-155dp"
						android:layout_marginTop="-535dp"
						android:layout_width="50dp"
						android:layout_height="44dp" />

					<TextView android:id="@+id/_32_001"
						android:textStyle="bold"
						android:textSize="17sp"
						android:textColor="@color/_bg__android_large___2_color"
						android:layout_marginLeft="0dp"
						android:layout_marginTop="24dp"
						android:layout_width="63.7dp"
						android:layout_height="24.7dp"
						android:text="@string/_32_001_string"
						 />

					<TextView android:id="@+id/tot__kwh"
						android:textSize="14sp"
						android:textColor="@color/_bg__android_large___2_color"
						android:layout_marginLeft="0dp"
						android:layout_marginTop="0dp"
						android:layout_width="63.4dp"
						android:layout_height="20.4dp"
						android:text="@string/tot__kwh_string"
						 />

				</RelativeLayout>


				<RelativeLayout android:id="@+id/group_18"
					android:layout_marginTop="0dp"
					android:layout_marginStart="241dp"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					>

					<View   android:id="@+id/_bg__group_18_ek1"
						android:background="@drawable/_bg__group_18_ek1_shape"
						 android:layout_marginStart="-276dp"
						android:layout_marginTop="-535dp"
						android:layout_width="50dp"
						android:layout_height="44dp" />

					<TextView android:id="@+id/rs_360"
						android:textStyle="bold"
						android:textSize="17sp"
						android:textColor="@color/_bg__android_large___2_color"
						android:layout_marginLeft="0dp"
						android:layout_marginTop="24dp"
						android:layout_width="65.7dp"
						android:layout_height="24.7dp"
						android:text="@string/rs_360_string"
						 />

					<TextView android:id="@+id/expend"
						android:textSize="14sp"
						android:textColor="@color/_bg__android_large___2_color"
						android:layout_marginLeft="0dp"
						android:layout_marginTop="0dp"
						android:layout_width="60.4dp"
						android:layout_height="20.4dp"
						android:text="@string/expend_string"
						 />

				</RelativeLayout>

			</RelativeLayout>

			<View   android:id="@+id/rectangle_4"
				android:background="@drawable/rectangle_4_shape"
				 android:layout_marginStart="17dp"
				android:layout_marginTop="225dp"
				android:layout_width="326dp"
				android:layout_height="282dp" />

			<ImageView android:id="@+id/line_6"
				android:src="@drawable/line_6"
				android:contentDescription="line_6"
				 android:layout_marginStart="16dp"
				android:layout_marginTop="464dp"
				android:layout_width="326dp"
				android:layout_height="1dp" />

			<ImageView android:id="@+id/line_12"
				android:src="@drawable/line_12"
				android:contentDescription="line_12"
				 android:layout_marginStart="140dp"
				android:layout_marginTop="463dp"
				android:layout_width="240dp"
				android:layout_height="240dp" />

			<ImageView android:id="@+id/line_14"
				android:src="@drawable/line_14"
				android:contentDescription="line_14"
				 android:layout_marginStart="193dp"
				android:layout_marginTop="463dp"
				android:layout_width="240dp"
				android:layout_height="240dp" />

			<ImageView android:id="@+id/line_9"
				android:src="@drawable/line_9"
				android:contentDescription="line_9"
				 android:layout_marginStart="86dp"
				android:layout_marginTop="463dp"
				android:layout_width="240dp"
				android:layout_height="240.01dp" />

			<TextView android:id="@+id/_6_00"
				android:textSize="11sp"
				android:textColor="@color/_bg__android_large___2_color"
				android:layout_marginLeft="36dp"
				android:layout_marginTop="469dp"
				android:layout_width="43.1dp"
				android:layout_height="16.1dp"
				android:text="@string/_6_00_string"
				 />

			<TextView android:id="@+id/_8_00"
				android:textSize="11sp"
				android:textColor="@color/_bg__android_large___2_color"
				android:layout_marginLeft="91dp"
				android:layout_marginTop="469dp"
				android:layout_width="43.1dp"
				android:layout_height="16.1dp"
				android:text="@string/_8_00_string"
				 />

			<TextView android:id="@+id/_10_00"
				android:textSize="11sp"
				android:textColor="@color/_bg__android_large___2_color"
				android:layout_marginLeft="143dp"
				android:layout_marginTop="469dp"
				android:layout_width="43.1dp"
				android:layout_height="16.1dp"
				android:text="@string/_10_00_string"
				 />

			<TextView android:id="@+id/_12_00"
				android:textSize="11sp"
				android:textColor="@color/_bg__android_large___2_color"
				android:layout_marginLeft="196dp"
				android:layout_marginTop="469dp"
				android:layout_width="43.1dp"
				android:layout_height="16.1dp"
				android:text="@string/_12_00_string"
				 />

			<TextView android:id="@+id/_14_00"
				android:textSize="11sp"
				android:textColor="@color/_bg__android_large___2_color"
				android:layout_marginLeft="250dp"
				android:layout_marginTop="469dp"
				android:layout_width="43.1dp"
				android:layout_height="16.1dp"
				android:text="@string/_14_00_string"
				 />

			<TextView android:id="@+id/_16_00"
				android:textSize="11sp"
				android:textColor="@color/_bg__android_large___2_color"
				android:layout_marginLeft="303dp"
				android:layout_marginTop="469dp"
				android:layout_width="43.1dp"
				android:layout_height="16.1dp"
				android:text="@string/_16_00_string"
				 />

			<ImageView android:id="@+id/rectangle_10"
				android:src="@drawable/rectangle_10"
				android:contentDescription="rectangle_10"
				 android:layout_marginStart="17dp"
				android:layout_marginTop="309dp"
				android:layout_width="325dp"
				android:layout_height="135.87dp" />

			<ImageView android:id="@+id/line_10"
				android:src="@drawable/line_10"
				android:contentDescription="line_10"
				 android:layout_marginStart="33dp"
				android:layout_marginTop="463dp"
				android:layout_width="240dp"
				android:layout_height="240dp" />

			<ImageView android:id="@+id/line_11"
				android:src="@drawable/line_11"
				android:contentDescription="line_11"
				 android:layout_marginStart="18dp"
				android:layout_marginTop="464dp"
				android:layout_width="240dp"
				android:layout_height="240dp" />

			<ImageView android:id="@+id/line_13"
				android:src="@drawable/line_13"
				android:contentDescription="line_13"
				 android:layout_marginStart="71dp"
				android:layout_marginTop="464dp"
				android:layout_width="240dp"
				android:layout_height="240dp" />

			<ImageView android:id="@+id/line_15"
				android:src="@drawable/line_15"
				android:contentDescription="line_15"
				 android:layout_marginStart="15.78dp"
				android:layout_marginTop="322.96dp"
				android:layout_width="325.58dp"
				android:layout_height="98.58dp" />

			<TextView android:id="@+id/gathering_usage_information_for_analysis_and_optimization_of_electric_vehicle_performance_"
				android:textSize="12sp"
				android:textColor="@color/_bg__android_large___2_color"
				android:layout_marginLeft="59dp"
				android:layout_marginTop="732dp"
				android:layout_width="255.2dp"
				android:layout_height="31.2dp"
				android:text="@string/gathering_usage_information_for_analysis_and_optimization_of_electric_vehicle_performance__string"
				 />


			<RelativeLayout android:id="@+id/group_20"
				android:layout_marginTop="666dp"
				android:layout_marginStart="96dp"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				>

				<View   android:id="@+id/_bg__group_20_ek1"
					android:background="@drawable/_bg__group_20_ek1_shape"
					 android:layout_marginStart="-96dp"
					android:layout_marginTop="-666dp"
					android:layout_width="168dp"
					android:layout_height="43dp" />

				<View   android:id="@+id/rectangle_5"
					android:background="@drawable/rectangle_5_shape"
					 android:layout_marginStart="0dp"
					android:layout_marginTop="0dp"
					android:layout_width="168dp"
					android:layout_height="43dp" />

				<TextView android:id="@+id/download_data"
					android:textStyle="bold"
					android:textSize="17sp"
					android:textColor="@color/_bg__android_large___2_color"
					android:layout_marginLeft="26dp"
					android:layout_marginTop="12dp"
					android:layout_width="131.7dp"
					android:layout_height="24.7dp"
					android:text="@string/download_data_string"
					 />

			</RelativeLayout>

			<View   android:id="@+id/ellipse_7"
				android:background="@drawable/ellipse_7_shape"
				 android:layout_marginStart="128dp"
				android:layout_marginTop="347dp"
				android:layout_width="11dp"
				android:layout_height="11dp" />

			<View   android:id="@+id/ellipse_8"
				android:background="@drawable/ellipse_8_shape"
				 android:layout_marginStart="130dp"
				android:layout_marginTop="349dp"
				android:layout_width="7dp"
				android:layout_height="7dp" />

		</RelativeLayout>

	</ScrollView>
</HorizontalScrollView>